sửa lỗi k lấy được file lớn + thêm trayIcon + thêm tự động đặt tên file